@@ -3,7 +3,7 @@
 // This software is subject to the terms of the IBM Jikes Compiler
 // License Agreement available at the following URL:
 // http://ibm.com/developerworks/opensource/jikes.
-// Copyright (C) 1996, 2003 IBM Corporation and others.  All Rights Reserved.
+// Copyright (C) 1996, 2004 IBM Corporation and others.  All Rights Reserved.
 // You must accept the terms of that agreement to use this software.
 //
 
@@ -643,7 +643,7 @@ public:
 
 #ifdef JIKES_DEBUG
     //
-    // To prevent arithmentic conversion to allow illegal calls inadvertently.
+    // To prevent arithmetic conversion to allow illegal calls inadvertently.
     // Since the return type is wrong, compilation will fail !
     //
     void FindOrInsert(LongInt) {}
@@ -689,7 +689,7 @@ public:
 
 #ifdef JIKES_DEBUG
     //
-    // To prevent arithmentic conversion to allow illegal calls inadvertently.
+    // To prevent arithmetic conversion to allow illegal calls inadvertently.
     //
     void FindOrInsert(int) {}
     void FindOrInsert(float) {}
@@ -737,7 +737,7 @@ public:
 
 #ifdef JIKES_DEBUG
     //
-    // To prevent arithmentic conversion to allow illegal calls inadvertently.
+    // To prevent arithmetic conversion to allow illegal calls inadvertently.
     //
     void FindOrInsert(int) {}
     void FindOrInsert(LongInt) {}
@@ -783,7 +783,7 @@ public:
 
 #ifdef JIKES_DEBUG
     //
-    // To prevent arithmentic conversion to allow illegal calls inadvertently.
+    // To prevent arithmetic conversion to allow illegal calls inadvertently.
     //
     void FindOrInsert(int) {}
     void FindOrInsert(LongInt) {}
